@@ -78,6 +78,10 @@ private:
     QLabel* lDiscLabel;
     KIntSpinBox* iDisc;
     KPushButton* pDiscEdit;
+    /** A spinbox for entering or selecting the total disc number */
+    QLabel* lDiscTotalLabel;
+    KIntSpinBox* iDiscTotal;
+    KPushButton* pDiscTotalEdit;
     /** A spinbox for entering or selecting the year of the album */
     QLabel* lYearLabel;
     KIntSpinBox* iYear;
@@ -124,6 +128,7 @@ private slots:
     void editComposerClicked();
     void editAlbumClicked();
     void editDiscClicked();
+    void editDiscTotalClicked();
     void editYearClicked();
     void editGenreClicked();
     void editCommentClicked();
